--- a/public/play.css
+++ b/public/play.css
@@ -53,7 +53,7 @@ body, html {
 .picture {
     text-align: center;
     line-height: 1em;
-    font-size: 5em;
+    font-size: 20.8vmin;
 }
 
 #play_desc {
