--- a/public/play.css
+++ b/public/play.css
@@ -1,6 +1,7 @@
 body, html {
     height: 100%;
     -webkit-tap-highlight-color: transparent;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .page {
